objects/PC_DocumentDetails_FieldSet__mdt.object
<CustomObject>
    <description>This metadata type is used to map fields sets to be displayed on the document management component by record types.</description>
    <fields>
        <fullName>PC_Document_RecordType_Namespaceprefix__c</fullName>
        <description>The field describes the namespace prefix for document record type.</description>
        <inlineHelpText>Namespace of record type</inlineHelpText>
        <label>Document Record Type Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Document_RecordType__c</fullName>
        <description>This field is for Document Record Type developer name</description>
        <inlineHelpText>Please provide Document Record Type DeveloperName</inlineHelpText>
        <label>Document Record Type</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_FieldSetName__c</fullName>
        <description>This field is for Document Field Set Name. Please provide the api name.</description>
        <inlineHelpText>Document Field Set Api</inlineHelpText>
        <label>Field Set Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DocumentDetails FieldSet</label>
    <pluralLabel>DocumentDetails FieldSets</pluralLabel>
</CustomObject>